--- a/HammerLike/Packages/manifest.json
+++ b/HammerLike/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "1.19.19",
+    "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.15.16",
     "com.unity.formats.alembic": "2.2.2",
     "com.unity.ide.rider": "3.0.14",
