--- a/.github/workflows/upload_to_gist.yml
+++ b/.github/workflows/upload_to_gist.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main  # Set to your default branch
     paths:
-      - 'HammerLike\Assets\WorkSpace\Scripts\Baseder/*.cs'  # Adjust the path to match your script files
+      - 'HammerLike\Assets\WorkSpace\Scripts\Base/*.cs'  # Adjust the path to match your script files
 
 jobs:
   upload_to_gist:
