--- a/.github/workflows/upload_to_gist.yml
+++ b/.github/workflows/upload_to_gist.yml
@@ -1,41 +1,21 @@
-name: Upload Scripts to Gist
+name: Upload CS Files to Gist
 
 on:
   push:
-    branches:
-      - main  # Set to your default branch
     paths:
-      - 'HammerLike/Assets/WorkSpace/Scripts/Base/*.cs'  # Adjust the path to match your script files
+      - 'HammerLike/Assets/WorkSpace/Scripts/Base/*.cs'
 
 jobs:
   upload_to_gist:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Upload to Gist
-      uses: fjogeleit/http-request-action@master
+    - name: Upload files to Gist
+      uses: gistsync/github-action@v2
       with:
-        url: "https://api.github.com/gists"
-        method: "POST"
-        contentType: "application/json"
-        headers: '{"Authorization": "token ${{ secrets.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 }}"}'
-        requestBody: |
-          {
-            "files": {
-              "${{ matrix.file }}": {
-                "content": "${{ steps.files.outputs.content }}"
-              }
-            },
-            "public": true  # Set to false if you want a private gist
-          }
-      env:
-        FILE: ${{ matrix.file }}
-
-    - name: Get File Content
-      id: files
-      uses: juliangruber/read-file-action@v1
-      with:
-        path: ./${{ env.FILE }}
+        gist_id: 'TaeSSuB'
+        GITHUB_TOKEN: ${{ secrets.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 }}
+        file_path: 'HammerLike/Assets/WorkSpace/Scripts/Base/*.cs'
