--- a/.github/workflows/upload_to_gist.yml
+++ b/.github/workflows/upload_to_gist.yml
@@ -1,21 +1,48 @@
-name: Upload CS Files to Gist
+name: Create Gists
 
 on:
   push:
-    paths:
-      - 'HammerLike/Assets/WorkSpace/Scripts/Base/*.cs'
+    branches:
+      - main
 
 jobs:
-  upload_to_gist:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Upload files to Gist
-      uses: gistsync/github-action@v2
-      with:
-        gist_id: 'TaeSSuB'
-        GITHUB_TOKEN: ${{ secrets.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 }}
-        file_path: 'HammerLike/Assets/WorkSpace/Scripts/Base/*.cs'
+      - name: List CS Files
+        run: |
+          find HammerLike/Assets/WorkSpace/Scripts/Base -type f -name '*.cs' > files.txt
+
+      - name: Create Gists
+        id: create_gists
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const octokit = require('@octokit/core');
+            const fileList = fs.readFileSync('files.txt', 'utf-8').split('\n').filter(Boolean);
+            const octo = new octokit.Octokit({ auth: process.env.GITHUB_TOKEN });
+            const gistPromises = fileList.map(file => {
+              const content = fs.readFileSync(file, 'utf-8');
+              return octo.request('POST /gists', {
+                description: `Gist created by GitHub Actions for ${file}`,
+                public: true,
+                files: {
+                  [`${file.split('/').pop()}.txt`]: {
+                    content: content
+                  }
+                }
+              });
+            });
+            Promise.all(gistPromises).then(gists => {
+              console.log('Gists created:');
+              gists.forEach(gist => console.log(gist.data.html_url));
+            }).catch(error => {
+              console.error('Error creating Gists: ', error);
+              process.exit(1);
+            });
