--- a/.github/workflows/upload_to_gist.yml
+++ b/.github/workflows/upload_to_gist.yml
@@ -1,4 +1,4 @@
-name: Create Gists
+name: Create Gist on Push
 
 on:
   push:
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+
+      - name: Install Dependencies
+        run: npm install @octokit/core
+
       - name: List CS Files
         run: |
           find HammerLike/Assets/WorkSpace/Scripts/Base -type f -name '*.cs' > files.txt
@@ -24,9 +32,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
-            const octokit = require('@octokit/core');
+            const { Octokit } = require('@octokit/core');
             const fileList = fs.readFileSync('files.txt', 'utf-8').split('\n').filter(Boolean);
-            const octo = new octokit.Octokit({ auth: process.env.GITHUB_TOKEN });
+            const octo = new Octokit({ auth: process.env.GITHUB_TOKEN });
             const gistPromises = fileList.map(file => {
               const content = fs.readFileSync(file, 'utf-8');
               return octo.request('POST /gists', {
