--- a/.github/workflows/upload_to_gist.yml
+++ b/.github/workflows/upload_to_gist.yml
@@ -27,30 +27,27 @@ jobs:
 
       - name: Create Gists
         id: create_gists
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const { Octokit } = require('@octokit/core');
-            const fileList = fs.readFileSync('files.txt', 'utf-8').split('\n').filter(Boolean);
-            const octo = new Octokit({ auth: process.env.GITHUB_TOKEN });
-            const gistPromises = fileList.map(file => {
-              const content = fs.readFileSync(file, 'utf-8');
-              return octo.request('POST /gists', {
-                description: `Gist created by GitHub Actions for ${file}`,
-                public: true,
-                files: {
-                  [`${file.split('/').pop()}.txt`]: {
-                    content: content
-                  }
+        run: |
+          const fs = require('fs');
+          const { Octokit } = require('@octokit/core');
+          const fileList = fs.readFileSync('files.txt', 'utf-8').split('\n').filter(Boolean);
+          const octo = new Octokit({ auth: process.env.GITHUB_TOKEN });
+          const gistPromises = fileList.map(file => {
+            const content = fs.readFileSync(file, 'utf-8');
+            return octo.request('POST /gists', {
+              description: `Gist created by GitHub Actions for ${file}`,
+              public: true,
+              files: {
+                [`${file.split('/').pop()}.txt`]: {
+                  content: content
                 }
-              });
+              }
             });
-            Promise.all(gistPromises).then(gists => {
-              console.log('Gists created:');
-              gists.forEach(gist => console.log(gist.data.html_url));
-            }).catch(error => {
-              console.error('Error creating Gists: ', error);
-              process.exit(1);
-            });
+          });
+          Promise.all(gistPromises).then(gists => {
+            console.log('Gists created:');
+            gists.forEach(gist => console.log(gist.data.html_url));
+          }).catch(error => {
+            console.error('Error creating Gists: ', error);
+            process.exit(1);
+          });
