--- a/.github/workflows/upload_to_gist.yml
+++ b/.github/workflows/upload_to_gist.yml
@@ -16,4 +16,4 @@ jobs:
           gist_url: https://gist.github.com/TaeSSuB/fdc6f54e047730dc849618ab858d7062
           gist_title: Example Gist Title
           gist_description: Example Gist Description
-          github_file: filename-to-sync
+          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/B_ObjectBase.cs
