--- a/.github/workflows/upload_to_gist2.yml
+++ b/.github/workflows/upload_to_gist2.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           auth: ${{ secrets.GIST_TOKEN }}
           gist_url: https://gist.github.com/TaeSSuB/fdc6f54e047730dc849618ab858d7062
-          gist_title: Example Gist Title
-          gist_description: Example Gist Description
-          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/B_ObjectBase.cs
+          gist_title: HammerLike Data Structure
+          gist_description: HammerLike 자료 구조
+          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/*.cs
