--- a/.github/workflows/upload_to_gist2.yml
+++ b/.github/workflows/upload_to_gist2.yml
@@ -16,4 +16,4 @@ jobs:
           gist_url: https://gist.github.com/TaeSSuB/fdc6f54e047730dc849618ab858d7062
           gist_title: HammerLike Data Structure
           gist_description: HammerLike 자료 구조
-          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/*.cs
+          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/B_ObjectBase.cs
