--- a/.github/workflows/upload_to_gist2.yml
+++ b/.github/workflows/upload_to_gist2.yml
@@ -1,19 +1,19 @@
-name: Upload CS Files to Gist
+#name: Upload CS Files to Gist
 
-on: [push]
+#on: [push]
 
-jobs:
-  gist-sync:
-    name: gist-sync
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - uses: popsiclestick/gist-sync-action@v1.2.0
-        id: sync
-        with:
-          auth: ${{ secrets.GIST_TOKEN }}
-          gist_url: https://gist.github.com/TaeSSuB/fdc6f54e047730dc849618ab858d7062
-          gist_title: HammerLike Data Structure
-          gist_description: HammerLike 자료 구조
-          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/B_ObjectBase.cs
+#jobs:
+#  gist-sync:
+#    name: gist-sync
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - uses: popsiclestick/gist-sync-action@v1.2.0
+#        id: sync
+#        with:
+#          auth: ${{ secrets.GIST_TOKEN }}
+#          gist_url: https://gist.github.com/TaeSSuB/fdc6f54e047730dc849618ab858d7062
+#          gist_title: HammerLike Data Structure
+#          gist_description: HammerLike 자료 구조
+#          github_file: HammerLike/Assets/WorkSpace/Scripts/Base/B_ObjectBase.cs
