--- a/HammerLike/Packages/manifest.json
+++ b/HammerLike/Packages/manifest.json
@@ -20,6 +20,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.2",
+    "notion-api": "file:C:/Users/KOCCA52/Downloads/unity-notion-api-master/unity-notion-api-master",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
