--- a/HammerLike/Packages/manifest.json
+++ b/HammerLike/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.cyanilux.urp-blitrenderfeature": "https://github.com/Cyanilux/URP_BlitRenderFeature.git",
     "com.kink3d.mirrors": "https://github.com/Kink3d/kMirrors.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap.extras": "3.1.2",
