--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,8 @@ HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Demos 
 HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Demos - Legs Animator/Legs Animator - Demos - URP Materials.unitypackage.meta
 HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Just Legs Animator Assembly Definitions.unitypackage.meta
 HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Legs Animator - Demos.unitypackage.meta
+HammerLike/Assets/FImpossible Creations/All Fimpossible Creations Plugins Assembly Definitions.unitypackage.meta
+HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Demos - Legs Animator/Legs Animator - Demos - HDRP Materials.unitypackage.meta
+HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Demos - Legs Animator/Legs Animator - Demos - URP Materials.unitypackage.meta
+HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Just Legs Animator Assembly Definitions.unitypackage.meta
+HammerLike/Assets/FImpossible Creations/Plugins - Animating/Legs Animator/Legs Animator - Demos.unitypackage.meta
