--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,6 @@ HammerLike/Assets/Plugins/Sirenix/Demos/Custom Attribute Processors.unitypackage
 HammerLike/Assets/Plugins/Sirenix/Demos/Custom Drawers.unitypackage.meta
 HammerLike/Assets/Plugins/Sirenix/Demos/Editor Windows.unitypackage.meta
 HammerLike/Assets/Plugins/Sirenix/Demos/Sample - RPG Editor.unitypackage.meta
+/HLPixelizerTest/Library
+/HLPixelizerTest/Logs
+/HLPixelizerTest/Temp
